k8s/tezos-node-base/tezos-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: tezos-node
  labels:
    app: tezos-node
spec:
  ports:
  - port: 9732
    name: p2p
  - port: 8732
    name: rpc
  - port: 9489
    name: metrics
  - port: 4247
    name: nonce-exposer
  selector:
    app: tezos-node
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tezos-node-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: tezos-node
  policyTypes:
  - Ingress
  - Egress
  egress:
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - ports:
    - port: 4247
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: tezos-node
  - ports:
    - port: 8445
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          xtzapp: tezos-remote-signer-loadbalancer
  - ports:
    - port: 9732
      protocol: TCP
  ingress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - ports:
    - port: 8732
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: trd-payout-sender
  - ports:
    - port: 9489
      protocol: TCP
    from:
    - namespaceSelector:
        matchLabels: {}
      podSelector:
        matchLabels:
          app: prometheus
  - ports:
    - port: 9732
      protocol: TCP
  - ports:
    - port: 4247
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: tezos-node
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tezos-remote-signer-loadbalancer-policy
spec:
  podSelector:
    matchLabels:
      xtzapp: tezos-remote-signer-loadbalancer
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8445
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: tezos-node
  - ports:
    - port: 8404
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels: {}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tezos-node
spec:
  serviceName: "tezos-node"
  selector:
    matchLabels:
      app: tezos-node
  template:
    metadata:
      labels:
        app: tezos-node
    spec:
      securityContext:
        fsGroup: 100
      containers:
      - name: tezos-node
        image: tezos/tezos
        command:
          - /bin/sh
        args:
          - "-c"
          - |
            /usr/local/bin/tezos-node run --config-file /var/run/tezos/node/data/config.json
        ports:
        - containerPort: 9732
          name: tezos-port
        - containerPort: 8732
          name: tezos-rpc-port
        volumeMounts:
        - name: tezos-node-pv-claim
          mountPath: /var/run/tezos
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /is_synced
            port: 31764
          periodSeconds: 60
          timeoutSeconds: 15
          failureThreshold: 10
      - name: tezos-accuser
        image: tezos/tezos
        args: [ "tezos-accuser" ]
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
      - name: leader-elector
        image: k8s.gcr.io/leader-elector:0.5
        args: [ "--election=$(KUBERNETES_NAME_PREFIX)-baker", "--http=0.0.0.0:4040" ]
        resources:
          limits:
            cpu: 0
      - name: tezos-nonce-exposer
        image: tezos-nonce-exposer
        resources:
          limits:
            cpu: 0
        volumeMounts:
        - name: tezos-node-pv-claim
          mountPath: /var/run/tezos
        imagePullPolicy: Always
        ports:
        - containerPort: 4247
          name: nonce-exposer
      - name: tezos-nonce-importer
        image: tezos-nonce-importer
        resources:
          limits:
            cpu: 0
        volumeMounts:
        - name: tezos-node-pv-claim
          mountPath: /var/run/tezos
        imagePullPolicy: Always
      - name: tezos-sidecar
        image: tezos-sidecar
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
